--- a/AIDLdemo/SimpleJarClient/AndroidManifest.xml
+++ b/AIDLdemo/SimpleJarClient/AndroidManifest.xml
@@ -31,14 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- <service
-            android:name="com.iflytek.platformservice.PlatformService"
-            android:enabled="true"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="com.iflytek.platformservice.PlatformService" />
-            </intent-filter>
-        </service> -->
+        <activity android:name="com.example.helloworld.UsbTest"></activity>
     </application>
 
 </manifest>
